# GIS-Anomaly-Detector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: deploy.yml
api/: claude_client.py  constants.py  dataset.py
app/: application.py  main.py
apps/: application.py  debug.py  notebook.ipynb
apps/__marimo__/session/: debug.py.json  demo_application.py.json
server/: main.py  requirements.txt
server/api/: anomaly_detection.py  claude_client.py  constants.py  utilities.py
tests/: notebook_test.py  test_data.py
tests/__marimo__/session/: notebook_test.py.json
